test/corpus/definitions.txt
================================================================================
Empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Integer assignment
================================================================================

foo = 42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (integer_literal)))

================================================================================
Variable assignment
================================================================================

foo = bar

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (identifier)))

================================================================================
Multiple assignments
================================================================================

foo = 12
bar = 27

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (integer_literal))
  (assignment
    (identifier)
    (integer_literal)))
