test/corpus/literals.txt
================================================================================
Booelan literal
================================================================================

foo = true

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (boolean_literal)))

================================================================================
Integer literal
================================================================================

foo = 42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (integer_literal)))

================================================================================
Integer literal (negative)
================================================================================

foo = -42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (integer_literal)))


================================================================================
Integer literal (negative space)
================================================================================

foo = -  42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (integer_literal)))

================================================================================
String literal
================================================================================

foo = "Hello World!"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal)))

================================================================================
String literal special character escapes
================================================================================

foo = "Hello\nWorld!"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (escape_sequence))))

================================================================================
String literal octal
================================================================================

foo = "Hello World\041"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (escape_sequence))))

================================================================================
String literal hex
================================================================================

foo = "Hello World\x21"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (escape_sequence))))

================================================================================
String literal character escapes
================================================================================

foo = "Hello\\\"World\""

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Unterminated string literal
================================================================================

foo = "

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (MISSING """))))

================================================================================
String literal unterminated escape
================================================================================

foo = "\"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (operator)
    (interpreted_string_literal
      (escape_sequence)
      (MISSING """))))
